# ai_commit_and_readme

./: .editorconfig  .gitignore  MANIFEST.in  Makefile  README.md  deploy_wiki.py  enrich_wiki_and_readme.py  eval_wiki.py  fix_all_prompts.py  fix_prompts.py  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_coverage.py  setup.py  simple_eval.py  update_eval_prompts.py  wikievalrunner.py
.claude/: settings.local.json
.github/workflows/: python-publish.yml  test.yml
ai_commit_and_readme/: __main__.py  agents.py  cli.py  constants.py  doc_eval.py  enrich_agent.py  logging_setup.py  main.py  process.py  prompt.md  test_cli.py  tools.py
ai_commit_and_readme/evals/: __init__.py  doc_eval.py  readme_eval.py  test_evaluators.py  wiki_eval.py
ai_commit_and_readme/prompts/: api_eval.md  architecture_eval.md  changelog_eval.md  cicd_eval.md  configuration_eval.md  contributing_eval.md  deployment_eval.md  faq_eval.md  home_eval.md  prompt.md  (+6 more)
autodoc_ai/: __init__.py  agents.py  settings.py  tools.py
config/: CLAUDE.md
eval_engine/: README.md  __init__.py  cli.py  engine.py  run.py  runner.py  setup.py
eval_engine_oai/: README.md  __init__.py  cli.py  evaluator.py  improver.py  runner.py
tests/: test_agents.py  test_base_crew.py  test_commit_summary.py  test_coverage_gap.py  test_crews_additional.py  test_enrichment.py  test_evaluators.py  test_improvement.py  test_init.py  test_init_additional.py  test_json_parsing.py  test_main.py  test_pipeline.py  test_tools.py  test_wiki_selector.py
wiki/: API.md  Architecture.md  CI-CD.md  Changelog.md  Configuration.md  Contributing.md  Deployment.md  FAQ.md  Home.md  Installation.md  Security.md  Usage.md
(+35 files in other folders)
