[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodoc-ai"
version = "1.0.4"
description = "AI-powered documentation generation and maintenance tool"
readme = "README.md"
authors = [{ name = "Oleksandr Kryklia", email = "kryklia@gmail.com" }]
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.1",
    "rich>=13.0.0",
    "autodoceval-crewai>=0.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/auraz/autodoc-ai"
"Bug Tracker" = "https://github.com/auraz/autodoc-ai/issues"
"Documentation" = "https://github.com/auraz/autodoc-ai/wiki"


[tool.setuptools]
packages = ["autodoc_ai", "autodoc_ai.prompts"]

[tool.setuptools.package-data]
"autodoc_ai" = ["prompts/*.md"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 170
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
exclude = [
    "build",
    "dist",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]
